--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -785,7 +785,7 @@ body{
 }
 *{
     scrollbar-width:thin;
-    scrollbar-color:var(--cin-border) var(--cin-bg-primary)
+    scrollbar-color: #33415500 #33415500;
 }
 .cin-btn-success{
     background:var(--cin-success);
@@ -2181,14 +2181,15 @@ body{
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 20;
-            display: none; /* مخفي في البداية */
-            width: 90%;
-            max-width: 800px;
-            height: 90vh;
-            background-color: rgba(15, 23, 42, 0.800);
-            border-radius: 1.5rem;
-            border: 2px solid var(--cin-secondary);
-            backdrop-filter: blur(8px);
+            display: none;
+            width: 100%;
+            
+            height: 100vh;
+            /* background-color: rgba(15, 23, 42, 0.800); */
+            /* border-radius: 1.5rem; */
+            /* border: 2px solid var(--cin-secondary); */
+            max-width: 1000px;
+            backdrop-filter: blur(4px);
             -webkit-backdrop-filter: blur(8px);
             overflow: hidden;
         }
@@ -2202,7 +2203,9 @@ body{
             align-items: center;
             text-align: center;
             scrollbar-width: thin;
-            scrollbar-color: rgba(var(--cin-secondary-dark-rgb), 0.6) rgba(var(--cin-bg-primary-rgb), 0.3);
+            scrollbar-color: none;
+            padding-top: 100px;
+            padding-bottom: 100px;
         }
         
         .content-inner::-webkit-scrollbar {
@@ -2210,17 +2213,17 @@ body{
          }
          
          .content-inner::-webkit-scrollbar-track {
-             background: rgba(var(--cin-bg-primary-rgb), 0.3);
+             background: none;
              border-radius: 10px;
          }
          
          .content-inner::-webkit-scrollbar-thumb {
-             background: rgba(var(--cin-secondary-dark-rgb), 0.6);
+             background: none;
              border-radius: 10px;
          }
          
          .content-inner::-webkit-scrollbar-thumb:hover {
-             background: rgba(var(--cin-secondary-dark-rgb), 0.8);
+             background: none;
              border-radius: 10px;
          }
 
@@ -2229,18 +2232,18 @@ body{
         }
 
         .content-wrapper::-webkit-scrollbar-track {
-            background: rgba(var(--cin-bg-primary-rgb) 0.3);
+            background: none;
             border-radius: 4px;
         }
 
         .content-wrapper::-webkit-scrollbar-thumb {
-            background: rgba(var(--cin-secondary-dark-rb), 0.6);
+            background: none;
             border-radius: 4px;
             transition: background 0.3s ease;
         }
 
         .content-wrapper::-webkit-scrollbar-thumb:hover {
-            background: rgba(var(--cin-secondary-dark-rb) 0.8);
+            background: none;
         }
 
         .underwater-card {
